--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,11 @@
             "import": "./dist/index.mjs",
             "require": "./dist/index.js"
         },
+        "./pages": {
+            "types": "./dist/pages.d.ts",
+            "import": "./dist/pages.mjs",
+            "require": "./dist/pages.js"
+        },
         "./server": {
             "types": "./dist/server.d.ts",
             "import": "./dist/server.mjs",
@@ -25,8 +30,8 @@
         }
     },
     "scripts": {
-        "build": "tsup src/index.ts src/server.ts --format cjs,esm --dts",
-        "dev": "tsup src/index.ts src/server.ts --format cjs,esm --dts --watch",
+        "build": "tsup",
+        "dev": "tsup --watch",
         "clean": "rm -rf dist",
         "test": "vitest run",
         "prepublishOnly": "npm run build && npm test"
